--- a/StreetSmartAPI/StreetSmart.API/WinForms/StreetSmart.WinForms.x86.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WinForms/StreetSmart.WinForms.x86.csproj
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\..\packages\CefSharp.WinForms.67.0.0\build\CefSharp.WinForms.props" Condition="Exists('..\..\packages\CefSharp.WinForms.67.0.0\build\CefSharp.WinForms.props')" />
-  <Import Project="..\..\packages\CefSharp.Common.67.0.0\build\CefSharp.Common.props" Condition="Exists('..\..\packages\CefSharp.Common.67.0.0\build\CefSharp.Common.props')" />
-  <Import Project="..\..\packages\cef.redist.x86.3.3396.1786\build\cef.redist.x86.props" Condition="Exists('..\..\packages\cef.redist.x86.3.3396.1786\build\cef.redist.x86.props')" />
-  <Import Project="..\..\packages\cef.redist.x64.3.3396.1786\build\cef.redist.x64.props" Condition="Exists('..\..\packages\cef.redist.x64.3.3396.1786\build\cef.redist.x64.props')" />
+  <Import Project="..\..\packages\CefSharp.WinForms.69.0.0\build\CefSharp.WinForms.props" Condition="Exists('..\..\packages\CefSharp.WinForms.69.0.0\build\CefSharp.WinForms.props')" />
+  <Import Project="..\..\packages\CefSharp.Common.69.0.0\build\CefSharp.Common.props" Condition="Exists('..\..\packages\CefSharp.Common.69.0.0\build\CefSharp.Common.props')" />
+  <Import Project="..\..\packages\cef.redist.x86.3.3497.1841\build\cef.redist.x86.props" Condition="Exists('..\..\packages\cef.redist.x86.3.3497.1841\build\cef.redist.x86.props')" />
+  <Import Project="..\..\packages\cef.redist.x64.3.3497.1841\build\cef.redist.x64.props" Condition="Exists('..\..\packages\cef.redist.x64.3.3497.1841\build\cef.redist.x64.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -12,7 +12,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>StreetSmart.WinForms</RootNamespace>
-    <AssemblyName>StreetSmart.WinForms.x86</AssemblyName>
+    <AssemblyName>StreetSmart.WinForms</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
@@ -62,7 +62,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>..\..\..\DemoAPI\Demo.WinForms\x86\StreetSmart.WinForms.x86.xml</DocumentationFile>
+    <DocumentationFile>..\..\..\DemoAPI\Demo.WinForms\x86\StreetSmart.WinForms.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <OutputPath>..\..\..\DemoAPI\Demo.WinForms\x86\</OutputPath>
@@ -72,7 +72,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>..\..\..\DemoAPI\Demo.WinForms\x86\StreetSmart.WinForms.x86.xml</DocumentationFile>
+    <DocumentationFile>..\..\..\DemoAPI\Demo.WinForms\x86\StreetSmart.WinForms.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
@@ -121,6 +121,12 @@
   <ItemGroup>
     <Compile Include="..\Common\API\APIBase.cs">
       <Link>API\APIBase.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\API\APISettings.cs">
+      <Link>API\APISettings.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\API\CommandLineArgs.cs">
+      <Link>API\CommandLineArgs.cs</Link>
     </Compile>
     <Compile Include="..\Common\API\Events\ApiEvent.cs">
       <Link>API\Events\ApiEvent.cs</Link>
@@ -386,6 +392,9 @@
     <Compile Include="..\Common\Extensions\BoolExtensions.cs">
       <Link>Extensions\BoolExtensions.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Extensions\ColorExtensions.cs">
+      <Link>Extensions\ColorExtensions.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Extensions\EnumExtensions.cs">
       <Link>Extensions\EnumExtensions.cs</Link>
     </Compile>
@@ -397,6 +406,9 @@
     </Compile>
     <Compile Include="..\Common\Factories\AddressSettingsFactory.cs">
       <Link>Factories\AddressSettingsFactory.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\Factories\CefSettingsFactory.cs">
+      <Link>Factories\CefSettingsFactory.cs</Link>
     </Compile>
     <Compile Include="..\Common\Factories\CoordinateFactory.cs">
       <Link>Factories\CoordinateFactory.cs</Link>
@@ -439,6 +451,9 @@
     </Compile>
     <Compile Include="..\Common\Handlers\DownloadHandler.cs">
       <Link>Handlers\DownloadHandler.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\Interfaces\API\IAPISettings.cs">
+      <Link>Interfaces\API\IAPISettings.cs</Link>
     </Compile>
     <Compile Include="..\Common\Interfaces\API\IObliqueViewer.cs">
       <Link>Interfaces\API\IObliqueViewer.cs</Link>
@@ -542,6 +557,9 @@
     <Compile Include="..\Common\Interfaces\Events\IEventArgs.cs">
       <Link>Interfaces\Events\IEventArgs.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Interfaces\GeoJson\CalculatedMethod.cs">
+      <Link>Interfaces\GeoJson\CalculatedMethod.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Interfaces\GeoJson\CRSType.cs">
       <Link>Interfaces\GeoJson\CRSType.cs</Link>
     </Compile>
@@ -641,6 +659,9 @@
     <Compile Include="..\Common\Interfaces\GeoJson\ITriangle.cs">
       <Link>Interfaces\GeoJson\ITriangle.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Interfaces\GeoJson\MeasurementTools.cs">
+      <Link>Interfaces\GeoJson\MeasurementTools.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Interfaces\GeoJson\MeasureMethod.cs">
       <Link>Interfaces\GeoJson\MeasureMethod.cs</Link>
     </Compile>
@@ -738,15 +759,15 @@
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\..\packages\cef.redist.x64.3.3396.1786\build\cef.redist.x64.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\cef.redist.x64.3.3396.1786\build\cef.redist.x64.props'))" />
-    <Error Condition="!Exists('..\..\packages\cef.redist.x86.3.3396.1786\build\cef.redist.x86.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\cef.redist.x86.3.3396.1786\build\cef.redist.x86.props'))" />
-    <Error Condition="!Exists('..\..\packages\CefSharp.Common.67.0.0\build\CefSharp.Common.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\CefSharp.Common.67.0.0\build\CefSharp.Common.props'))" />
-    <Error Condition="!Exists('..\..\packages\CefSharp.Common.67.0.0\build\CefSharp.Common.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\CefSharp.Common.67.0.0\build\CefSharp.Common.targets'))" />
-    <Error Condition="!Exists('..\..\packages\CefSharp.WinForms.67.0.0\build\CefSharp.WinForms.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\CefSharp.WinForms.67.0.0\build\CefSharp.WinForms.props'))" />
-    <Error Condition="!Exists('..\..\packages\CefSharp.WinForms.67.0.0\build\CefSharp.WinForms.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\CefSharp.WinForms.67.0.0\build\CefSharp.WinForms.targets'))" />
+    <Error Condition="!Exists('..\..\packages\cef.redist.x64.3.3497.1841\build\cef.redist.x64.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\cef.redist.x64.3.3497.1841\build\cef.redist.x64.props'))" />
+    <Error Condition="!Exists('..\..\packages\cef.redist.x86.3.3497.1841\build\cef.redist.x86.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\cef.redist.x86.3.3497.1841\build\cef.redist.x86.props'))" />
+    <Error Condition="!Exists('..\..\packages\CefSharp.Common.69.0.0\build\CefSharp.Common.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\CefSharp.Common.69.0.0\build\CefSharp.Common.props'))" />
+    <Error Condition="!Exists('..\..\packages\CefSharp.Common.69.0.0\build\CefSharp.Common.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\CefSharp.Common.69.0.0\build\CefSharp.Common.targets'))" />
+    <Error Condition="!Exists('..\..\packages\CefSharp.WinForms.69.0.0\build\CefSharp.WinForms.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\CefSharp.WinForms.69.0.0\build\CefSharp.WinForms.props'))" />
+    <Error Condition="!Exists('..\..\packages\CefSharp.WinForms.69.0.0\build\CefSharp.WinForms.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\CefSharp.WinForms.69.0.0\build\CefSharp.WinForms.targets'))" />
   </Target>
-  <Import Project="..\..\packages\CefSharp.Common.67.0.0\build\CefSharp.Common.targets" Condition="Exists('..\..\packages\CefSharp.Common.67.0.0\build\CefSharp.Common.targets')" />
-  <Import Project="..\..\packages\CefSharp.WinForms.67.0.0\build\CefSharp.WinForms.targets" Condition="Exists('..\..\packages\CefSharp.WinForms.67.0.0\build\CefSharp.WinForms.targets')" />
+  <Import Project="..\..\packages\CefSharp.Common.69.0.0\build\CefSharp.Common.targets" Condition="Exists('..\..\packages\CefSharp.Common.69.0.0\build\CefSharp.Common.targets')" />
+  <Import Project="..\..\packages\CefSharp.WinForms.69.0.0\build\CefSharp.WinForms.targets" Condition="Exists('..\..\packages\CefSharp.WinForms.69.0.0\build\CefSharp.WinForms.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
